--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-    <title></title>
+    <title>index</title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css"href="{% static 'polls/style.css' %}">
 </head>
 
 <body>
