--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,9 +1,18 @@
-<h1>{{ question.question_text }}</h1>
+<!DOCTYPE html>
+<html>
 
-<ul>
-{% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-{% endfor %}
-</ul>
+<head>
+    <title></title>
+</head>
 
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+<body>
+    <h1>{{ question.question_text }}</h1>
+    <ul>
+        {% for choice in question.choice_set.all %}
+        <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+        {% endfor %}
+    </ul>
+    <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+</body>
+
+</html>
